syntax = "proto3";

package mychain.mymodule;

import "gogoproto/gogo.proto";
import "mychain/mymodule/params.proto";
import "mychain/mymodule/entity.proto";

option go_package = "mychain/x/mymodule/types";

// GenesisState defines the mymodule module's genesis state.
message GenesisState {
           Params params      = 1 [(gogoproto.nullable) = false];
  repeated Entity entityList  = 2 [(gogoproto.nullable) = false];
           uint64 entityCount = 3;
}

